--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+flake8 = "*"
+pylint = "*"
+pycodestyle = "*"
+rope = "*"
+black = "*"
 
 [packages]
 mysql-connector-python = "*"
@@ -12,3 +17,6 @@ requests = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
